--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -30,5 +30,12 @@ build:
       with:
         node-version: ${{ matrix.node-version }}
 
+    - name: Start MongoDB
+      uses: supercharge/mongodb-github-action@1.10.0
+      with:
+        mongodb-version: '7.0'
+
+
     - run: npm i
     - run: npm test
+    - run: npm run dev 
