--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -37,5 +37,8 @@ build:
 
 
     - run: npm i
+
+    - name: Run server 
+      run: npm start and sleep 5
+
     - run: npm test
-    - run: npm run dev 
